--- a/css/base.css
+++ b/css/base.css
@@ -53,7 +53,9 @@ html , body{
   width: 100%;
   overflow: hidden;
 }
-
+body{
+  font-family: 黑体;
+}
 a:link, a:visited , a:hover , a:active {
   text-decoration: none;
   color: inherit;
@@ -237,13 +239,13 @@ span.lpn-ghost {
 /*---> */
 
 .main-board{
-  width: 686px;
+  width: 737px;
   height: 102px;
   position: absolute;
   z-index: 19999;
   bottom: 45px;
   left: -50%;
-  margin-left: -343px;
+  margin-left: -370px;
   color: #999;
 }
 .main-board-con{
@@ -277,7 +279,7 @@ span.lpn-ghost {
   position: absolute;
   left: 279px;
   top: 20px;
-  width: 267px;
+  width: 332px;
   height: 25px;
 }
 .main-board .board-m-t .b-bar0,
@@ -298,7 +300,7 @@ span.lpn-ghost {
   background-position: 0 -6px;
 }
 .main-board .board-m-t .b-bar3{
-  background-position: 0 -9px;
+  background-position: 0 -3px;
 }
 
 
@@ -316,7 +318,7 @@ span.lpn-ghost {
   margin-top: -34px;
   margin-left: 270px;
   float: left;
-  width: 267px;
+  width: 332px;
   height: 25px;
   text-align: center;
   line-height: 25px;
@@ -377,6 +379,9 @@ span.lpn-ghost {
 }
 .main-board .board-share a.tt,.r-share a.tt{
   background-position: -99px -26px;
+}
+.main-board .board-share a.tt,.r-share a.douban{
+  background-position: -41px -53px;
 }
 .main-bottom{
   position: absolute;
@@ -554,20 +559,37 @@ span.lpn-ghost {
   cursor: pointer;
   display:none;
 }
-.ranking {
-    background:url(../images/ranking-bg.png) no-repeat;
-    width:776px;
-    height:458px;
-    position: relative;
-}
+
 #result-mask .lpn-panel {overflow:hidden;height:0;}
 .result{
   width: 1161px;
   height:458px;
-  background: url(../images/result-panel.png) no-repeat;
+  background: url(../images/panel-bg.png) no-repeat;
   position: relative;
 }
-.result .r-time1{
+.result-head{
+  position: absolute;
+  left: 354px;
+  top: 70px;
+  font-size: 30px;
+  width:481px;
+  height: 50px;
+  text-align: right;
+  background: url(../images/result-head.png) no-repeat;
+}
+.result-head span{
+  margin-right: 4px;
+}
+.result-head .time6{
+  margin-right: 10px;
+}
+.result-head .time4{
+  margin-right: 36px;
+}
+.result-head .time2{
+  margin-right: 39px;
+}
+/*.result .r-time1{
     position: absolute;
     width: 86px;
     height: 41px;
@@ -595,12 +617,100 @@ span.lpn-ghost {
     top: 207px;
     left: 370px;
 }
+*/
+.result-con{
+  position: absolute;
+  width: 810px;
+  height: 279px;
+  top: 125px;
+  left: 183px;
+  background: url(../images/result-con-bg.png) no-repeat;
+}
 .result .r-share{
   position: absolute;
-  width: 372px;
+  width: 320px;
   height: 41px;
-  top: 280px;
-  left: 243px;
+  top: 30px;
+  right: 36px;
+}
+.result .r-share span{
+  float: left;
+  font-style: italic;
+  color: #999;
+  line-height: 34px;
+  font-size: 16px;
+  font-family: 黑体;
+}
+.result-con .btn1{
+  float: left;
+  width: 108px;
+  height: 36px;
+  line-height: 36px;
+  background: url(../images/btn-bg1.png) no-repeat;
+  text-align: center;
+  font-size: 18px;
+  color: #bbb;
+  text-shadow: 1px 1px 1px #000;
+  cursor: pointer;
+  font-family: 黑体;
+}
+.result-tit{
+  text-align: left;
+  width: 350px;
+  float: left;
+  font-family: 黑体;
+  margin-top: 53px;
+  margin-left: 116px;
+}
+.result-tit strong{
+  margin-left: -26px;
+  font-size: 24px;
+}
+.result-tit ul{
+  list-style: decimal;
+  margin-top: 6px;
+  font-size: 13px;
+  color: #BBB;
+}
+.result-tit ul li{
+  margin: 10px 0;
+}
+
+.result-tit .btn1:hover{
+  color: white;
+}
+.result-form{
+  float: left;
+  width: 220px;
+  color: #b5b5b5;
+  font-size: 14px;
+  font-family: 黑体;
+  margin-top: 53px;
+  margin-left: 16px;
+}
+.result-form label{
+  display: block;
+  margin-bottom: 17px;
+}
+
+.result-form input{
+  width: 170px;
+  padding: 4px 0 4px 7px;
+  background: black;
+  border: none;
+  color: #9d9d9d;
+}
+.result-form-suc{
+  width: 120px;
+  margin: 0 auto;
+  margin-top: 108px;
+  text-align: center;
+  font-size: 24px;
+}
+.result-failure{
+  padding: 58px 100px 0 100px;
+  text-align: left;
+  font-size: 22px;
 }
 .result .r-close,.ranking .r-close{
   background:url(../images/result_close.png) no-repeat;
@@ -624,22 +734,60 @@ span.lpn-ghost {
   overflow: hidden;
   line-height: 23px;
 }
+.ranking {
+    background:url(../images/panel-bg.png) no-repeat;
+    width:1161px;
+    height:458px;
+    position: relative;
+}
+.ranking .r-head{
+  position: absolute;
+  width: 634px;
+  top: 80px;
+  left: 260px;
+  text-align: right;
+  line-height: 30px;
+}
+.ranking .r-head-title{
+  float: left;
+  font-family: 黑体;
+  font-size: 24px;
+}
+.ranking .selected{
+  color: white;
+}
+.ranking .btn{
+  margin-left: 10px;
+}
 .ranking .r-list {
+    background: url(../images/rank-list-bg.png) no-repeat;
+    width: 663px;
+    height: 251px;
+    line-height: 35px;
     top:116px;
     left:246px;
 }
-.result .r-list table,.ranking .r-list table{
+.ranking .r-list-l , .ranking .r-list-r{
+  margin-top: 35px;
+  width: 50%;
+  float: left;
+}
+.ranking .r-list table{
+  margin: 0 5% 0 15%;
+  width: 80%;
+  color: white;
+}
+.result .r-list table{
   width: 100%;
   color: white;
 }
-.result .r-list tr:nth-child(1),
-.result .r-list tr:nth-child(2),
-.result .r-list tr:nth-child(3),
-.ranking .r-list tr:nth-child(1),
-.ranking .r-list tr:nth-child(2),
-.ranking .r-list tr:nth-child(3){
+
+.ranking .r-list-l tr:nth-child(1),
+.ranking .r-list-l tr:nth-child(2),
+.ranking .r-list-l tr:nth-child(3){
   color: red;
 }
+
 .result .r-slider,.ranking .r-slider{
   position: absolute;
   width: 13px;
@@ -813,8 +961,9 @@ span.lpn-ghost {
     background: url(../images/number_result1.png) no-repeat;
     display: inline-block;
     width: 26px;
-    height: 51px;
+    height: 39px;
     background-position: 0 0;
+    margin-top: 6px;
 }
 
 .time01{
@@ -1139,28 +1288,28 @@ span.lpn-ghost {
 
 /* for button */
 .btn{
+  font-family: 黑体;
   display: inline-block;
   cursor: pointer;
+  height: 30px;
+  color: #999;
+  line-height: 30px;
+  padding-left: 20px;
+  margin-right: 20px;
+  background: url(../images/btn-bg.png) no-repeat 0 0px ;
 }
-.btn .btn-pre{
+.btn .btn-r{
   display: inline-block;
-  vertical-align: middle;
   width: 20px;
-  height: 36px;
-  background: url(../images/board-bgs1.png) no-repeat 0 -58px ;
+  margin-right: -20px;
+  height: 30px;
+  float: right;
+  background: url(../images/btn-bg.png) no-repeat right 0px ;
 }
-.btn:hover .btn-aft{
+.btn:hover{
   color: white;
+  opacity: 1;
 }
-.btn-agian{
-  vertical-align: middle;
-  background: url(../images/btn-aft.png) no-repeat;
-  display: inline-block;
-  height: 44px;
-  width:122px;
-  opacity:.7;
-}
-.btn-agian:hover {opacity:1;}
 
 /*gallery*/
 #gallery-mask {background:rgba(0,0,0,0.7);}
