--- a/css/base.css
+++ b/css/base.css
@@ -1396,18 +1396,24 @@ span.lpn-ghost {
   position: relative;
 }
 #gallery-mask .slider-btn{
-  height: 10px;
+  height: 20px;
   width: 50px;
+  position: absolute;
+  top: -9px;
+  left: 0px;
+  cursor: w-resize;
+}
+#gallery-mask .slider-btn-inner{
+  height: 10px;
+  margin-top: 4px;
+  left: 0;
+  top: 0;
   background: white;
   -webkit-transform: skew(-20deg);
   -moz-transform: skew(-20deg);
   -ms-transform: skew(-20deg);
   -o-transform: skew(-20deg);
   transform: skew(-20deg);
-  position: absolute;
-  top: -4px;
-  left: 0px;
-  cursor: w-resize;
 }
 .video-gallery span { position: absolute;background:url(../images/video_play.png) no-repeat;width:119px;height:46px;bottom:0;left:0;text-indent:-999em;
     -webkit-transform: skew(20deg);
