monthly ranking function

--- a/css/base.css
+++ b/css/base.css
@@ -870,6 +870,7 @@ span.lpn-ghost {
   width: 80%;
   color: white;
 }
+#ranking-month {float:right;}
 .result .r-list table{
   width: 100%;
   color: white;
