--- a/css/portrait.css
+++ b/css/portrait.css
@@ -1,2 +1,2 @@
 body {display:none;}
-html {background:#000 url(../images/ipad_turn.gif) no-repeat center 300px;}
+html {background:#fff url(../images/ipad_turn.gif) no-repeat center center;background-size:450px auto;}
