--- a/css/base.css
+++ b/css/base.css
@@ -820,6 +820,7 @@ span.lpn-ghost {
   height: 231px;
   overflow: hidden;
   line-height: 23px;
+  font-family:'PorscheNewsGothic-Bold';
 }
 .ranking {
     background:url(../images/panel-bg.png) no-repeat;
