--- a/m/css/base.css
+++ b/m/css/base.css
@@ -1080,7 +1080,7 @@ span.lpn-ghost {
   margin-top: 47px;
   margin-bottom: 13px;
   text-shadow: 1px 1px 1px #000;
-    color:#fff;
+  color:#fff;
 
 }
 .spirit-wrap .spirit-con{
@@ -1188,7 +1188,6 @@ span.lpn-ghost {
 .speed19{
     background-position: -645px -89px;
 }
-
 .speed20{
     background-position: 0 -178px;
 }
@@ -1735,7 +1734,9 @@ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,
   -o-transform: skew(-20deg);
   transform: skew(-20deg);
 }
-.video-gallery span { position: absolute;background:url(../images/video_play.png) no-repeat;width:119px;height:46px;bottom:0;left:0;text-indent:-999em;
+.video-gallery span {
+  display: none;
+  position: absolute;width:119px;height:46px;bottom:0;left:0;text-indent:-999em;
     -webkit-transform: skew(20deg);
     -moz-transform: skew(20deg);
     -ms-transform: skew(20deg);
@@ -1743,6 +1744,109 @@ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,
     transform: skew(20deg);}
 
 #gallery-mask .video-gallery .photo:hover span {-webkit-transform: skew(0,0);transform: skew(0,0);}
+
+/*for fancy-slider-wrap img-wrap */
+.fancy-slider-mask{
+  z-index: 2000000;
+}
+.fancy-slider-mask .lpn-panel{
+  width: 100%;
+}
+.fancy-slider-wrap{
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.fancy-slider-wrap .img-wrap{
+  position: relative;
+  left: 0;
+  margin-left: 0;
+  transition:  left 0.3s ease;
+  -webkit-transition:  left 0.3s ease;
+}
+.fancy-slider-wrap .img-wrap .img-item{
+  float: left;
+  position: relative;
+}
+.fancy-slider-wrap .img-wrap .img-item .desc
+{
+  background: rgba(0, 0, 0, .5);
+  position: absolute;
+  width: 90%;
+  bottom: 0;
+  z-index: 10000;
+  text-align: left;
+  padding: 20px 5%;
+}
+.fancy-slider-wrap .slider-left,
+.fancy-slider-wrap .slider-right{
+  background: rgba(0,0,0,0.4);
+  width: 75px;
+  height: 75px;
+  position: absolute;
+  top: 50%;
+  margin-top: -37px;
+  left: 0;
+  background: url(../images/fancy-bg.png) no-repeat 0 -75px;
+}
+.fancy-slider-wrap .slider-right{
+  left: auto;
+  right: 0;
+  background-position: 0 -150px;
+}
+.fancy-slider-wrap .r-share{
+  position: absolute;
+  background: rgba(0,0,0,0.5) url(../images/fancy-bg.png) no-repeat -8px -8px;
+  width: 60px;
+  height: 60px;
+  -webkit-transform: skew( -20deg );
+  top: 20px;
+  right: 20px;
+}
+.fancy-slider-wrap .r-share-con{
+  top: 0;
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background:  -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,0)), color-stop(40%,rgba(3,8,14,0.73)), color-stop(44%,rgba(0,0,0,0.73)), color-stop(48%,rgba(0,0,0,0.73)), color-stop(52%,rgba(0,0,0,0.73)), color-stop(56%,rgba(0,0,0,0.73)), color-stop(59%,rgba(9,13,16,0.73)), color-stop(100%,rgba(125,185,232,0)));
+}
+.fancy-slider-wrap .r-share-inner{
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  margin-top: -70px;
+}
+.fancy-slider-wrap .r-share-inner .r-share-close{
+  height: 66px;
+  width: 165px;
+  margin: 10px auto;
+  background: rgba(0,0,0,.5);
+  text-indent: -9999px;
+}
+.fancy-slider-wrap .btn-share-wrap a{
+  margin: 0 20px;
+}
+.btn-share-wrap a i{
+  background: url(../images/share.png) no-repeat;
+  display: inline-block;
+  width: 80px;
+  height: 60px;
+  margin-top: 11px;
+}
+.btn-share-wrap a.sina i{
+  background-position: -25px 0;
+}
+.btn-share-wrap a.qqwb i{
+  background-position: -230px 0;
+}
+.btn-share-wrap a.renren i{
+  background-position: 0px -75px;
+}
+.btn-share-wrap a.douban i{
+  background-position: -185px -75px;
+}
+
 
 .fancybox-download {background:url(../images/fanybox_download.png) no-repeat;width:86px;height:38px;display:block;position: absolute;top:5px;right:60px;z-index:9999;opacity:0.3}
 .fancybox-download:hover {opacity:1;}
