--- a/m/css/base.css
+++ b/m/css/base.css
@@ -775,6 +775,14 @@ span.lpn-ghost {
   margin: 0 auto;
   margin-top: 54px;
 }
+.result .btn1{
+  background: url(../images/btn2.png) no-repeat;
+  width: 245px;
+  height: 65px;
+  display: inline-block;
+  font-size: 32px;
+  line-height: 65px;
+}
 .result-head span{
     margin-right: 4px;
 }
@@ -967,13 +975,13 @@ span.lpn-ghost {
   background: url(../images/btn1.png);
   margin-right: 28px;
   margin-top: -8px;
-  height: 54px;
+  height: 56px;
   font-size: 26px;
   line-height: 54px;
 }
 .ranking .btn .btn-r{
   background: url(../images/btn1.png) right;
-  height: 54px;
+  height: 56px;
 }
 .ranking .r-list {
     width: 868px;
@@ -1596,7 +1604,6 @@ span.lpn-ghost {
   width: 116px;
   height: 36px;
   line-height: 36px;
-  background: url(../images/btn-bg1.png) no-repeat;
   text-align: center;
   font-size: 18px;
   color: #bbb;
@@ -1818,43 +1825,15 @@ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,
   margin-top: -70px;
 }
 .fancy-slider-wrap .r-share-inner .r-share-close{
-  height: 66px;
-  width: 165px;
+  height: 65px;
+  width: 184px;
   margin: 10px auto;
-  background: rgba(0,0,0,.5);
+  background: url(../images/close.png) no-repeat;
   text-indent: -9999px;
 }
 .fancy-slider-wrap .btn-share-wrap a{
   margin: 0 20px;
 }
-.btn-share-wrap a i{
-  background: url(../images/share.png) no-repeat;
-  display: inline-block;
-  width: 80px;
-  height: 60px;
-  margin-top: 11px;
-}
-.btn-share-wrap a.sina i{
-  background-position: -25px 0;
-}
-.btn-share-wrap a.qqwb i{
-  background-position: -230px 0;
-}
-.btn-share-wrap a.renren i{
-  background-position: 0px -75px;
-}
-.btn-share-wrap a.douban i{
-  background-position: -185px -75px;
-}
-
-
-.fancybox-download {background:url(../images/fanybox_download.png) no-repeat;width:86px;height:38px;display:block;position: absolute;top:5px;right:60px;z-index:9999;opacity:0.3}
-.fancybox-download:hover {opacity:1;}
-.fancybox-share {background:url(../images/fancybox_share.png) no-repeat;width:56px;height:38px;position:absolute;top:5px;right:10px;z-index:9999;opacity:0.3}
-.fancybox-share:hover {opacity:1;}
-
-.icon-pause {display:none;position: absolute;top:5%;left:50%;background:none;width:37px;height:50px;margin-left:-18px;z-index:9999999;opacity:.6;}
-.bg-pause {display:none;width:100%;height:100%;background:rgba(0,0,0,0.6);z-index:19998; position: fixed;}
 
 .no-rgba .bg-pause {background:url(../images/fancybox_overlay.png)}
 
