--- a/m/css/base.css
+++ b/m/css/base.css
@@ -266,6 +266,7 @@ span.lpn-ghost {
   left: 50%;
   margin-left: -88px;
   top: -10px;
+  z-index: 10001;
 }
 .nav-wrap .btn-wrap{
   margin: 34px 38px;
