--- a/m/css/base.css
+++ b/m/css/base.css
@@ -1693,10 +1693,12 @@ margin-top: -2px;}
 #gallery-mask .photo-gallery , #gallery-mask .video-gallery{
   height: 211px;
   padding: 20px 0px;
-  width: 2000px;
+  width: 3000px;
+  position: relative;
   -webkit-transition: margin-left 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */;
   transition: margin-left 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */;
  }
+.no-animate{transition:none !important;-webkit-transition: none !important}
 #gallery-mask .photo-wrap-inner{
   overflow: hidden;
   margin: 0 80px;
