--- a/css/portrait_m.css
+++ b/css/portrait_m.css
@@ -1,2 +1,2 @@
 body {display:none;}
-html {background:#fff url(../images/ipad_turn.gif) no-repeat center center;background-size:960px auto;}
+html {background:url(../images/iphone_turn.gif) no-repeat center center;background-size:90% auto;}
