--- a/m/css/base.css
+++ b/m/css/base.css
@@ -99,7 +99,7 @@ a {
   z-index: 99999;
   text-align : center;
   white-space: nowrap;
-  background: rgba(0,0,0,0.3);
+  background: #000;
 }
 
 .no-rgba .lpn-mask {background:url(../images/fancybox_overlay.png)}
@@ -153,7 +153,6 @@ span.lpn-ghost {
 #process-num{
   color: red;
   text-align: center;
-  font-family: PorscheNewsGothic-Bold;
   font-style: italic;
   font-weight: bold;
 }
@@ -259,9 +258,9 @@ span.lpn-ghost {
   left: 0;
 }
 .nav{
-  width: 176px;
-  height: 70px;
-  background: url(../images/m-nav.png);
+  width: 226px;
+  height: 90px;
+  background: url(../images/m-nav.png) no-repeat center top;
   position: absolute;
   left: 50%;
   margin-left: -88px;
@@ -269,18 +268,18 @@ span.lpn-ghost {
   z-index: 10001;
 }
 .nav-wrap .btn-wrap{
-  margin: 34px 38px;
+  margin: 20px 64px;
   font-size: 31px;
 }
 .nav-wrap .btn-wrap a{
   display: inline-block;
   position: relative;
   color: #FFF;
-  height: 86px;
-  line-height: 86px;
+  height: 82px;
+  line-height: 82px;
   background: url(../images/btn-bg.png);
   padding-left: 25px;
-  width: 213px;
+  width: 186px;
   text-align: center;
 }
 .nav-wrap .btn-wrap a:first-child{
@@ -323,11 +322,11 @@ span.lpn-ghost {
   background-position: -185px -75px;
 }
 .nav-up{
-  background: url(../images/icons.png) no-repeat 0 -60px;
-  width: 43px;
-  height: 25px;
+  background: url(../images/icons.png) no-repeat center -57px;
+  width: 100%;
+  height: 40px;
   display: block;
-  margin: -10px auto;
+  margin: -17px auto 0 auto;
 }
 .nav-back{
   background: url(../images/icons.png) no-repeat 0 0;
@@ -679,6 +678,7 @@ span.lpn-ghost {
   text-align: center;
 }
 .main-metas .start {
+  margin-top:10%;
   cursor: pointer;
 }
 .main-metas .goon {
@@ -694,7 +694,9 @@ span.lpn-ghost {
   margin-top: -10px;
 }
 .main-metas .c-mouse-text{
-  font-family: 黑体;
+  font-size:22px;
+  width:500px;
+  text-align: center;
   text-shadow: 1px 1px 1px #000;
 }
 .shake {
@@ -1137,7 +1139,7 @@ span.lpn-ghost {
   width: 45px;
   height: 63px;
   margin-right: -3px;
-  background-position: 3px 0;
+  background-position: 0px 0;
 }
 .speed01{
   background-position: -70px 0px;
@@ -1146,7 +1148,7 @@ span.lpn-ghost {
   background-position: -140px 0px;
 }
 .speed03{
-  background-position: -210px 0px;
+  background-position: -216px 0px;
 }
 .speed04{
   background-position: -285px 0px;
@@ -1787,6 +1789,8 @@ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,
   z-index: 10000;
   text-align: left;
   padding: 20px 5%;
+    font-size:22px;
+    line-height:150%;
 }
 .fancy-slider-wrap .slider-left,
 .fancy-slider-wrap .slider-right{
@@ -1796,21 +1800,20 @@ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,
   top: 50%;
   margin-top: -50px;
   left: 0;
-  background: rgba(0,0,0,0.4) url(../images/fancy-bg.png) no-repeat 18px -64px
+  background: url(../images/fancybox_prev.png) no-repeat;
 }
 .fancy-slider-wrap .slider-right{
   left: auto;
   right: 0;
-  background-position: 0 -150px;
+  background: url(../images/fancybox_next.png) no-repeat;
 }
 .fancy-slider-wrap .r-share{
   position: absolute;
-  background: rgba(0,0,0,0.5) url(../images/fancy-bg.png) no-repeat -8px -8px;
-  width: 60px;
-  height: 60px;
-  -webkit-transform: skew( -20deg );
-  top: 20px;
-  right: 20px;
+  background:url(../images/gallery_share_weibo.png) no-repeat;
+    width:92px;
+    height:62px;
+top:0;right:150px;
+    display:block;
 }
 .fancy-slider-wrap .r-share-con{
   top: 0;
@@ -1836,6 +1839,8 @@ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,
 .fancy-slider-wrap .btn-share-wrap a{
   margin: 0 20px;
 }
+.fancy-slider-mask .r-close {position: absolute;background:url(../images/gallery_close.png) no-repeat;width:160px;height:62px;z-index:999;}
+.fancy-slider-mask .lpn-panel {margin:0;padding:0;}
 
 .no-rgba .bg-pause {background:url(../images/fancybox_overlay.png)}
 
